REOPENED125603
AX: HANG: virginamerica.com: Pressing the print button on the boarding pass page locks up VoiceOver and Safari.
https://bugs.webkit.org/show_bug.cgi?id=125603
Summary AX: HANG: virginamerica.com: Pressing the print button on the boarding pass p...
chris fleizach
Reported 2013-12-11 14:56:57 PST
Repro: put this in the location field and press return: javascript:print()
Attachments
patch (1.70 KB, patch)
2013-12-11 15:18 PST, chris fleizach
no flags
chris fleizach
Comment 1 2013-12-11 14:57:06 PST
chris fleizach
Comment 2 2013-12-11 15:18:17 PST
WebKit Commit Bot
Comment 3 2013-12-12 16:15:41 PST
Comment on attachment 219007 [details] patch Clearing flags on attachment: 219007 Committed r160515: <http://trac.webkit.org/changeset/160515>
WebKit Commit Bot
Comment 4 2013-12-12 16:15:43 PST
All reviewed patches have been landed. Closing bug.
Alexey Proskuryakov
Comment 5 2013-12-19 13:51:43 PST
I suspect that this might have caused bug 126014.
Alexey Proskuryakov
Comment 6 2013-12-19 15:31:00 PST
Chris suggested to roll out while he is looking into this. Landed the rollout as <http://trac.webkit.org/r160866>. Also filed <https://bugs.webkit.org/show_bug.cgi?id=126021> for the general case of using this pattern.
Note You need to log in before you can comment on or make changes to this bug.