AX: HANG: virginamerica.com: Pressing the print button on the boarding pass page locks up VoiceOver and Safari. https://bugs.webkit.org/show_bug.cgi?id=125603

Reviewed by Anders Carlsson.

Allow the print dialog to spin its run loop while accessibility is enabled so that VoiceOver does not hang on the WebProcess.

* WebProcess/WebCoreSupport/WebChromeClient.cpp:
(WebKit::WebChromeClient::print):


Canonical link: https://commits.webkit.org/143690@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@160515 268f45cc-cd09-0410-ab3c-d52691b4dbfc